2007-08-06    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg_imp): Now flag actions (like
	set etc.) are printed on debug again.
	(tino_getopt_print_option_name): added
	(tino_getopt_usage): tino_getopt_print_option_name now used
	(tino_getopt_init): DEFAULT_ENV implemented
	(tino_getopt_usage): help corrected

2007-05-12    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_freeOn): now uses tino_file_close

2007-06-13    <tino@firebird.03.softkill.net>

	* alloc.h (TINO_REALLOC0, TINO_REALLOC0_INC): added

2007-05-31    <tino@firebird.03.softkill.net>

	* getopt.h (TINO_GETOPT_MAXOPTS): TINO_MAXOPTS renamed
	(TINO_GETOPT_STRINGFLAG): added
	(tino_getopt_init): BUGFIX: If TINO_GETOPT_DEFAULT and
	TINO_GETOPT_NODEFAULT present, skip the default value and issue a
	warning.

2007-05-20    <tino@firebird.03.softkill.net>

	* alarm.h (tino_alarm_set_watchdog): watchdog now waits the given
	time before looping each seconds, this doubles the watchdog time.
	Now you can use the watchdog even for long running things (like
	connect).
	(tino_alarm_run, tino_alarm_handler): tino_alarm_running to skip
	some kernel calls.

2007-05-08    <tino@firebird.03.softkill.net>

	* auxbuf.h: added

2007-04-25    <tino@firebird.03.softkill.net>

	* file.h (tino_file_close_ign): added

2007-04-20    <tino@firebird.03.softkill.net>

	* err.h (tino_verr): corrected and comment optimized

2007-04-18    <tino@firebird.03.softkill.net>

	* signals.h (tino_sighandler_dummy, tino_sigdummy): added

2007-04-16    <tino@firebird.03.softkill.net>

	* signals.h (tino_sigsuspend): added

2007-04-15    <tino@firebird.03.softkill.net>

	* alloc.h (tino_free_null): added

	* sock.h (tino_sock_error): now this routine is allowed to return
	(as I needed this feature.  Not returning was a miscalculation).
	Also several routines now permit tino_sock_error to return.  (The
	default behavior was not to return, so there shall be no problem